# zprp-23z-python-orm

./: .gitignore  README.md  design_proposal_migration.md  justfile  pyproject.toml  schema.py  skibidi_orm-0.1.0-py3-none-any.whl  test_database.db  testing_schema.py  tox.ini
.containers/postgres-container/: docker-compose.yml
.github/workflows/: autoformat.yml  check-types.yml  publish.yml  run-tests.yml  tox-tests.yml
containers/postgres-container/: docker-compose.yml
docs/html/skibidi_orm/: index.html
docs/html/skibidi_orm/cli/: index.html  run.html  utils.html
docs/source/: conf.py  index.rst  model.rst  skibidi_orm.query_engine.adapter.rst  skibidi_orm.query_engine.config.rst  skibidi_orm.query_engine.connection.rst  skibidi_orm.query_engine.field.rst  skibidi_orm.query_engine.model.rst  skibidi_orm.query_engine.rst  tutorial.rst
html/skibidi_orm/cli/: migration_file_creator.html
migration_engine/: base_table.py  column.py  migrator.py  run-migrate.py  sqlite3_adapter.py  table_example.py
migration_engine/adapters/: base_adapter.py  sqlite3_adapter.py
migrations/: migration.py
src/migration_engine/: migration_element.py  table_example.py
src/migration_engine/adapters/: sqlite3_adapter.py
src/skibidi_orm/cli/: migration_file_creator.py  revision_inspection.py  run.py  utils.py
src/skibidi_orm/exceptions/: cli_exceptions.py  config_exceptions.py  constraints.py  db_mutator_exceptions.py  irreversible_operation_exception.py  operations.py
src/skibidi_orm/migration_engine/: config.py  db_inspector.py  migration_element.py  table_example.py  utils.py
src/skibidi_orm/query_engine/: config.py
src/zprp_23z_python_orm/migration_engine/: base_table.py  migration_element.py  run-migrate.py  table_example.py
tests/cli/: test_run.py
tests/migration_engine/: conftest.py  test_config.py  test_db_inspectors.py  test_module_cooperation.py  test_operations.py  test_sqlite3_converter.py  test_sqlite3_executor.py  test_state_manager.py
tests/migration_engine/adapters/: test_sqlite3_adapter.py
tests/migration_engine/state_manager/: test_create_column_operation.py  test_state_manager.py
tests/query_engine/adapter/: test_compiler.py  test_sqlite_adapter.py
tests/query_engine/config/: test_sqlite_config.py
tests/query_engine/connection/: test_engine.py  test_identity.py  test_session.py  test_transaction.py
tests/query_engine/field/: test_field.py  test_related_field.py  test_validators.py
tests/query_engine/model/: test_base.py  test_base2.py  test_base_crud.py  test_meta_options.py
tests/query_engine/operations/: test_clauses.py  test_crud.py  test_functions.py  test_select.py
tests/skibidi-orm/: conftest.py
tests/skibidi-orm/cli/: test_run.py
tests/skibidi-orm/migration_engine/: conftest.py  sql_data.py  test_module_cooperation.py
(+204 files in other folders)
