[project]
name = "SkiBiDi-ORM"
version = "0.1.25"
description = "Python ORM"
authors = [
    {name = "xDepcio", email = "olek.drwal@gmail.com"},
    {name = "jedrzej-grabski", email = "grabski.dev@gmail.com"},
    {name = "mbienkowski", email = "bienkowski.maksym@gmail.com"}
]
dependencies = [
    "typer>=0.11.0",
    "colorama>=0.4.6",
    "fastapi>=0.111.0",
    "black>=24.4.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.1.1",
]

[tool.pdm.scripts]
tests = "pytest --verbose --color=yes --ignore ./tmp"

[project.entry-points."console_scripts"]
skibidi-orm = "skibidi_orm.cli.run:main"
